--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,9 @@
   padding-top: 24px;
   border-top: 2px solid grey;
   padding-top: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .links-container{
