--- a/app/assets/stylesheets/components/_study_card.scss
+++ b/app/assets/stylesheets/components/_study_card.scss
@@ -1,12 +1,12 @@
 #card-study-page {
   display:flex;
   justify-content: center;
-  margin-bottom: 20px;
+  height: 100vh;
 }
 
 .card-main {
   width: 650px;
-  height: 600px;
+  height: 650px;
   margin: 20px auto;
   padding: 10px;
   display: flex;
